# homer_robbie_architecture

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
homer_robbie_architecture/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
homer_robbie_architecture/include/homer_robbie_architecture/Architecture/Config/: Config.h
homer_robbie_architecture/include/homer_robbie_architecture/Architecture/Singleton/: Clock.h  SequenceNumber.h
homer_robbie_architecture/include/homer_robbie_architecture/Architecture/StateMachine/: StateMachine.h
homer_robbie_architecture/include/homer_robbie_architecture/Architecture/Thread/: Condition.h  Mutex.h  Thread.h  TwoWayThreadModule.h
homer_robbie_architecture/include/homer_robbie_architecture/Workers/Math/: Box2D.h  Line2D.h  Math.h  Matrix.h  Obb2D.h  Pixel.h  Polygon2D.h  Pose.h  Transformation2D.h  Vector3D.h  mat2.h  mat2_inl.h  mat3.inl  misc.h  vec3_inl.h
homer_robbie_architecture/include/homer_robbie_architecture/Workers/String/: String.h
homer_robbie_architecture/include/homer_robbie_architecture/Workers/VectorGraphics/: VectorObject2D.h
homer_robbie_architecture/src/Architecture/Config/: Config.cpp
homer_robbie_architecture/src/Architecture/Singleton/: Clock.cpp  SequenceNumber.cpp
homer_robbie_architecture/src/Architecture/Thread/: Condition.cpp  Mutex.cpp  Thread.cpp
homer_robbie_architecture/src/Workers/Math/: Circle2D.cpp  Homography.cpp  Matrix.cpp  Obb2D.cpp  Point2D.cpp  Polygon2D.cpp  Pose.cpp  Transformation2D.cpp  Vector3D.cpp  mat3.cpp
homer_robbie_architecture/src/Workers/String/: String.cpp
homer_robbie_architecture/src/Workers/VectorGraphics/: VectorObject2D.cpp
include/homer_robbie_architecture/Architecture/Serializer/: cvmat_serialization.h
include/homer_robbie_architecture/Architecture/Thread/: Types.h
include/homer_robbie_architecture/Workers/ImageHelpers/: ImageMaskCV.h
include/homer_robbie_architecture/Workers/Math/: Circle2D.h  Homography.h  Point2D.h  mat3.h  vec2.h
rpm/: ros-kinetic-homer-robbie-architecture.spec
src/Architecture/StateMachine/: StateMachine.cpp
src/Workers/ImageHelpers/: ImageMaskCV.cpp
src/Workers/Math/: Line2D.cpp  Math.cpp  misc.cpp
